# LLM-TradeBot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: api.Dockerfile  base.Dockerfile
llm_tradebot/: __init__.py
llm_tradebot/core/: __init__.py  config.py  logging.py  time_utils.py  types.py
llm_tradebot/infra/: __init__.py  cache.py  db.py
llm_tradebot/scripts/: README.md
llm_tradebot/services/: __init__.py
llm_tradebot/services/api/: __init__.py  __main__.py  main.py
llm_tradebot/services/evaluator/: __init__.py  __main__.py  main.py
llm_tradebot/services/feature_engine/: __init__.py  __main__.py  main.py
llm_tradebot/services/ingestor/: __init__.py  __main__.py  main.py
llm_tradebot/services/router/: __init__.py  __main__.py  main.py
llm_tradebot/services/trader/: __init__.py  __main__.py  main.py
llm_tradebot/skills/: __init__.py  registry.py
tests/: __init__.py  test_api_smoke.py
