[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "llm-tradebot"
version = "0.1.0"
description = "Minimal modular scaffold for an AI-agent-driven quant trading system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "uvicorn>=0.35.0,<1.0.0",
  "websockets>=12",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.4.1,<9.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
